substrate/frame/support/test/tests/pallet_ui/authorize_wrong_closure_6.stderr
error[E0631]: type mismatch in function arguments
  --> tests/pallet_ui/authorize_wrong_closure_6.rs:36:23
   |
36 |         #[pallet::authorize(Pallet::<T>::authorize_call1)]
   |                             ^^^^^^ expected due to this
...
48 |         fn authorize_call1(_source: TransactionSource, _a: u32) -> TransactionValidityWithRefund {
   |         ---------------------------------------------------------------------------------------- found signature defined here
   |
   = note: expected function signature `for<'a> fn(frame_support::pallet_prelude::TransactionSource, &'a _) -> _`
              found function signature `fn(frame_support::pallet_prelude::TransactionSource, _) -> _`
note: required by a bound in `macro_inner_authorize_call_for_call1`
  --> tests/pallet_ui/authorize_wrong_closure_6.rs:36:23
   |
36 |         #[pallet::authorize(Pallet::<T>::authorize_call1)]
   |                             ^^^^^^ required by this bound in `macro_inner_authorize_call_for_call1`
help: consider adjusting the signature so it borrows its argument
   |
48 |         fn authorize_call1(_source: TransactionSource, _a: &u32) -> TransactionValidityWithRefund {
   |                                                            +

error[E0631]: type mismatch in function arguments
  --> tests/pallet_ui/authorize_wrong_closure_6.rs:36:23
   |
36 |         #[pallet::authorize(Pallet::<T>::authorize_call1)]
   |                             ------^^^^^^^^^^^^^^^^^^^^^^
   |                             |
   |                             expected due to this
   |                             required by a bound introduced by this call
...
48 |         fn authorize_call1(_source: TransactionSource, _a: u32) -> TransactionValidityWithRefund {
   |         ---------------------------------------------------------------------------------------- found signature defined here
   |
   = note: expected function signature `for<'a> fn(frame_support::pallet_prelude::TransactionSource, &'a _) -> _`
              found function signature `fn(frame_support::pallet_prelude::TransactionSource, _) -> _`
note: required by a bound in `macro_inner_authorize_call_for_call1`
  --> tests/pallet_ui/authorize_wrong_closure_6.rs:36:23
   |
36 |         #[pallet::authorize(Pallet::<T>::authorize_call1)]
   |                             ^^^^^^ required by this bound in `macro_inner_authorize_call_for_call1`
help: consider wrapping the function in a closure
   |
36 |         #[pallet::authorize(|_source: frame_support::pallet_prelude::TransactionSource, _a: &u32| Pallet::<T>::authorize_call1(_source, *_a))]
   |                             +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++                             ++++++++++++++
help: consider adjusting the signature so it borrows its argument
   |
48 |         fn authorize_call1(_source: TransactionSource, _a: &u32) -> TransactionValidityWithRefund {
   |                                                            +

error[E0308]: mismatched types
  --> tests/pallet_ui/authorize_wrong_closure_6.rs:40:38
   |
18 | #[frame_support::pallet]
   | ------------------------ arguments to this function are incorrect
...
40 |         pub fn call1(origin: OriginFor<T>, a: u32) -> DispatchResult {
   |                                            ^ expected `u32`, found `&u32`
   |
note: associated function defined here
  --> tests/pallet_ui/authorize_wrong_closure_6.rs:48:6
   |
48 |         fn authorize_call1(_source: TransactionSource, _a: u32) -> TransactionValidityWithRefund {
   |            ^^^^^^^^^^^^^^^                             -------
help: consider dereferencing the borrow
   |
40 |         pub fn call1(origin: OriginFor<T>, *a: u32) -> DispatchResult {
   |                                            +
